# advent

./: .gitignore  .gitmodules  README.md  README.org  advent.cabal  package.yaml  stack.yaml
2015-2020/: README.md  README.org  advent.cabal  package.yaml
2015-2020/src/: Grid.hs  HintMixins.hs
2015-2020/src/TwentyEighteen/: Day1.hs  Day10.hs  Day12.hs  Day14.hs  Day2.hs  Day20.hs  Day3.hs  Day4.hs  Day6.hs  Day8.hs
2015-2020/src/TwentyFifteen/: Day10.hs  Day2.hs  Day20.hs  Day21.hs  Day23.hs  Day3.hs  Day4.hs  Day6.hs  Day7.hs
2015-2020/src/TwentyNineteen/: Day1.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day17.hs  Day21.hs  Day3.hs  Day4.hs  Day5.hs  Day7.hs  Day8.hs  Day9.hs
2015-2020/src/TwentySeventeen/: Day12.hs  Day15.hs  Day16.hs  Day22.hs  Day23.hs  Day24.hs  Day5.hs  Day6.hs  Day9.hs
2015-2020/src/TwentySixteen/: Day11.hs  Day13.hs  Day18.hs  Day19.hs  Day2.hs  Day21.hs  Day23.hs  Day5.hs  Day7.hs  Day9.hs
2015-2020/src/TwentyTwenty/: Day10.hs  Day13.hs  Day14.hs  Day16.hs  Day18.hs  Day4.hs  Day6.hs  Day8.hs
2015-2020/src/TwentyTwentyOne/: Day1.hs
2021/: .gitignore  README.org  default.nix  hie.yaml  shell.nix  x2021.cabal
2021/app/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day666.hs  Day7.hs  Day8.hs  Day9.hs  DayX.hs  Main.hs  Tracers.hs  Util.hs
2021/app/Helper/: Coord.hs  Grid.hs  Tracers.hs  Util.hs
2021/input/: 1.txt
2021/src/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day666.hs  Day7.hs  Day8.hs  Day9.hs
2021/src/Helper/: Bits.hs  Coord.hs  Grid.hs  TH.hs  Tracers.hs  Util.hs
2021/test/: TestSuite.hs
2022/: README.org  default.nix  hie.yaml  x2022.cabal
2022/app/: Main.hs
2022/src/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
2022/src/Helper/: Coord.hs  Grid.hs  Util.hs
2022/test/: TestSuite.hs
2023/: README.org  cabal.project  default.nix  hie.yaml  shell.nix  x2023.cabal
2023/app/: Main.hs
2023/input/: 21.txt
2023/src/: Adlude.hs  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day13IO.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day666.hs  Day7.hs  Day8.hs  Day9.hs
2023/src/Helper/: Collection.hs  Grid.hs  TH.hs  Util.hs
2023/test/: TestSuite.hs
2024/: Makefile  README.org  cabal.project  default.nix  hie.yaml  package.yaml  x2024.cabal  year-template.cabal
2024/input/: 21.txt
2024/input/examples/: 7_2.txt
2024/src/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day666.hs  Day7.hs  Day8.hs  Day9.hs
2024/test/: Spec.hs
2025/: Makefile  README.org  cabal.project  default.nix  hie.yaml  package.yaml  shell.nix  x2025.cabal
2025/app/: Main.hs
2025/input/: 12.txt  9.txt
2025/input/examples/: 12_1.txt
2025/src/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day666.hs  Day7.hs  Day8.hs  Day9.hs
2025/test/: Spec.hs
adlude/: .gitignore  adlude.cabal  cabal.project  hie.yaml
adlude/src/: Adlude.hs
adlude/src/Helper/: Alias.hs  Bits.hs  Braket.hs  Collection.hs  Coord.hs  Grid.hs  TH.hs  Tracers.hs  Unary.hs  Util.hs
app/: Main.hs
input/2017/: 19.txt
input/2019/: 13.txt  18_2_cut.txt
src/: Coord.hs  Day15.hs  Day17.hs  Day18.hs  Day19.hs  Grid.hs  TwentyEighteen.hs  TwentyNineteen.hs  Util.hs
src/TwentyEighteen/: Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day4.hs  Day5.hs  Day7.hs  Day9.hs  DayX.hs  Solutions.hs
src/TwentyFifteen/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  DayX.hs
src/TwentyNineteen/: Day10.hs  Day13.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day6.hs  Intcode.hs  Solutions.hs
src/TwentySeventeen/: Day1.hs  Day10.hs  Day11.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day7.hs  Day8.hs
src/TwentySixteen/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  DayX.hs
src/TwentyTwenty/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  DayX.hs
year-template/: Makefile  README.org  cabal.project  default.nix  hie.yaml  package.yaml  year-template.cabal
year-template/app/: Main.hs
year-template/src/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day666.hs  Day7.hs  Day8.hs  Day9.hs
year-template/test/: TestSuite.hs
(+2 files in other folders)
