cabal-version:      2.4
name:               x2021
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: Solutions to AOC 2021

-- A longer description of the package.
-- description: Solutions to AOC 2021

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Harry Askham
maintainer:         harryaskham@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable x2021
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      containers
    hs-source-dirs:   app
    default-language: Haskell2010
