cabal-version:      2.4
name:               x2021
version:            0.1.0.0
author:             Harry Askham
maintainer:         harryaskham@gmail.com
extra-source-files: CHANGELOG.md

executable x2021
    main-is:            Main.hs
    other-modules:      Day1,
                        Day2,
                        Day3,
                        Day4,
                        Day5,
                        Day6,
                        Day7,
                        Day8,
                        Day9,
                        Day10,
                        Day11,
                        Day12,
                        Day13,
                        Day14,
                        Day15,
                        Day16,
                        Day17,
                        Day18,
                        Day19,
                        Day20,
                        Day21,
                        Day22,
                        Day23,
                        Day24,
                        Day25,
                        Day666,
                        Helper.Coord,
                        Helper.Grid,
                        Helper.Tracers,
                        Helper.Util
    build-depends:      base ^>=4.14.3.0,
                        relude,
                        pqueue,
                        parsec,
                        vector,
                        array,
                        extra,
    hs-source-dirs:     app
    default-language:   Haskell2010
    mixins:             base hiding (Prelude),
                        relude (Relude as Prelude),
                        relude
    default-extensions: OverloadedStrings,
                        TupleSections,
                        LambdaCase,
                        MultiWayIf
                        ImportQualifiedPost
    ghc-options:        -Weverything
                        -Wno-implicit-prelude
                        -Wno-unused-imports
                        -Wno-unused-packages
                        -Wno-missing-export-lists
                        -Wno-missing-deriving-strategies
                        -Wno-missing-safe-haskell-mode
                        -Wno-missing-exported-signatures
                        -Wno-missing-import-lists
                        -Wno-missed-specialisations
                        -Wno-all-missed-specialisations
                        -Wno-unsafe
                        -Wno-safe
                        -Wno-missing-local-signatures
                        -Wno-monomorphism-restriction
