cabal-version:      2.4
name:               adlude
version:            0.1.0.0
author:             Harry Askham
maintainer:         harryaskham@gmail.com

common common-settings
    build-depends:      base,
                        relude,
                        pqueue,
                        bytestring,
                        parsec,
                        megaparsec,
                        replace-megaparsec,
                        z3,
                        vector,
                        array,
                        extra,
                        split,
                        text,
                        containers,
                        unordered-containers,
                        mtl,
                        bimap,
                        mod,
                        semirings,
                        distributive,
                        template-haskell,
                        file-embed,
                        utility-ht,
                        monad-memo,
                        benchpress,
                        fin,
                        MissingH,
                        safe,
                        linear,
                        lens,
                        bitwise,
                        random,
                        string-qq,
                        hashable
    default-language:   Haskell2010
    mixins:             base hiding (Prelude),
                        relude (Relude as Prelude),
                        relude
    default-extensions: OverloadedStrings,
                        TupleSections,
                        LambdaCase,
                        MonadComprehensions,
                        AllowAmbiguousTypes,
                        MultiWayIf,
                        BlockArguments,
                        ImportQualifiedPost,
                        EmptyCase,
                        FlexibleContexts,
                        FlexibleInstances,
                        InstanceSigs,
                        MultiParamTypeClasses,
                        UndecidableInstances,
                        QuasiQuotes,
                        NamedFieldPuns,
                        TypeOperators,
                        DeriveFoldable,
                        DeriveFunctor,
                        DeriveGeneric,
                        PostfixOperators,
                        DeriveLift,
                        UnicodeSyntax,
                        DeriveTraversable,
                        DerivingStrategies,
                        GeneralizedNewtypeDeriving,
                        StandaloneDeriving,
                        ScopedTypeVariables,
                        ConstraintKinds,
                        RankNTypes,
                        TypeApplications,
                        ApplicativeDo,
                        DefaultSignatures,
                        PatternSynonyms,
                        ExistentialQuantification,
                        FunctionalDependencies,
                        GADTs,
                        DataKinds,
                        KindSignatures,
                        StrictData,
                        TemplateHaskell,
                        RecordWildCards
    ghc-options:        -Weverything
                        -Wno-implicit-prelude
                        -Wno-unused-imports
                        -Wno-unused-packages
                        -Wno-missing-export-lists
                        -Wno-missing-deriving-strategies
                        -Wno-missing-safe-haskell-mode
                        -Wno-missing-exported-signatures
                        -Wno-missing-import-lists
                        -Wno-missed-specialisations
                        -Wno-all-missed-specialisations
                        -Wno-unsafe
                        -Wno-safe
                        -Wno-missing-local-signatures
                        -Wno-monomorphism-restriction
                        -Wno-missing-home-modules
                        -Wno-name-shadowing
                        -Wno-type-defaults
                        -Wno-incomplete-patterns
                        -Wno-incomplete-uni-patterns
library
    import:             common-settings
    hs-source-dirs:     src
    exposed-modules:    Adlude
    other-modules:      Helper.TH
                        Helper.Bits
                        Helper.Collection
                        Helper.Grid
                        Helper.Coord
                        Helper.Tracers
                        Helper.Alias
                        Helper.Unary
                        Helper.Util
